# cub

./: .clang-format  .clangd  .cproject  .gitignore  .project  CHANGELOG.md  CHANGE_LOG.TXT  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.TXT  README.md  VERSION.TXT  annotated.html  arg__index__input__iterator_8cuh.html  arg__index__input__iterator_8cuh_source.html  block__discontinuity_8cuh.html  block__discontinuity_8cuh_source.html  block__exchange_8cuh.html  block__exchange_8cuh_source.html  block__exchange_8cuh_source.html.REMOVED.git-id  block__histo__256_8cuh.html  block__histogram_8cuh.html  block__histogram_8cuh_source.html  block__load_8cuh.html  block__load_8cuh_source.html  block__load_8cuh_source.html.REMOVED.git-id  block__radix__sort_8cuh.html  block__radix__sort_8cuh_source.html  block__raking__layout_8cuh.html  block__reduce_8cuh.html  block__reduce_8cuh_source.html  block__scan_8cuh.html  block__scan_8cuh_source.html  block__scan_8cuh_source.html.REMOVED.git-id  block__store_8cuh.html  block__store_8cuh_source.html  cache__modified__input__iterator_8cuh.html  cache__modified__input__iterator_8cuh_source.html  cache__modified__output__iterator_8cuh.html  (+452 more)
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: mirror-main-to-master.yml  push-to-legacy-repositories.yml
back40/: gpu_radix_sort.cuh  ns_wrapper.cuh
back40/.svn/: all-wcprops  entries
back40/radix_sort/: cta_scan_pass.cuh  kernel_upsweep_pass.cuh
back40/reduce/: kernel_policy.cuh  kernels.cuh  problem_instance.cuh
benchmarks/: README.md
benchmarks/nvbench_helper/: CMakeLists.txt  look_back_helper.cuh  nvbench_helper.cu  nvbench_helper.cuh
benchmarks/scripts/: analysis.ipynb  analyze.py  verify.py
cmake/: CubBuildCompilerTargets.cmake  CubBuildTargetList.cmake  CubCompilerHacks.cmake  CubCudaConfig.cmake  CubHeaderTesting.cmake  CubInstallRules.cmake  CubUtilities.cmake  header_test.in
cub/: CONTRIBUTING.md  README.md  allocator.cuh  arch_device_props.cuh  arch_props.cuh  cub.cuh  debug.cuh  device_props.cuh  multi_buffer.cuh  operators.cuh  type_utils.cuh  util_allocator.cuh  util_arch.cuh  util_compiler.cuh  util_cpp_dialect.cuh  util_debug.cuh  util_deprecated.cuh  util_device.cuh  util_iterator.cuh  util_macro.cuh  util_math.cuh  util_namespace.cuh  util_ptx.cuh  util_type.cuh  util_vector.cuh  version.cuh
cub/.svn/: all-wcprops  dir-prop-base  entries
cub/agent/: agent_adjacent_difference.cuh  agent_batch_memcpy.cuh  agent_histogram.cuh  agent_merge_sort.cuh  agent_radix_sort_downsweep.cuh  agent_radix_sort_histogram.cuh  agent_radix_sort_onesweep.cuh  agent_radix_sort_upsweep.cuh  (+18 more)
cub/benchmarks/: CMakeLists.txt
cub/benchmarks/bench/histogram/: even.cu
cub/benchmarks/bench/histogram/multi/: even.cu
cub/benchmarks/bench/partition/: if.cu
cub/benchmarks/bench/radix_sort/: keys.cu  pairs.cu
cub/benchmarks/bench/reduce/: sum.cu
cub/benchmarks/bench/run_length_encode/: encode.cu  non_trivial_runs.cu
cub/benchmarks/bench/scan/exclusive/: by_key.cu
cub/benchmarks/bench/select/: flagged.cu
cub/benchmarks/docker/: recipe.py
cub/benchmarks/nvbench_helper/: nvbench_helper.cuh
cub/benchmarks/scripts/: .gitignore  search.py
cub/benchmarks/scripts/cub/bench/: bench.py  build.py  config.py  score.py  search.py
docs/: .gitignore  Doxyfile  DoxygenLayout.xml  VERSION.md  contributing.md  developer_overview.md  developer_overview.rst  device_perf.xls  device_perf.xls.REMOVED.git-id  download_cub.dox  download_cub.html  doxygen.exe.REMOVED.git-id  doxygen_config.dox  extra_stylesheet.css  footer.html  gen_docs.sh  generate_markdown.bash  header.html  index.rst  mainpage.dox  references.bib  releases.md  repo.bat  repo.toml  test_overview.md  test_overview.rst  tuning.rst
examples/: CMakeLists.txt  Makefile  coo_graph.cuh  example_block_radix_sort.cu  example_block_reduce.cu  example_block_scan.cu  example_block_scan_sum.cu  example_block_tridiagonal_solve.cu  example_coo_spmv.cu  example_coo_spmv_double.cu  example_dispatch_framework.cu  example_matrix_transpose.cu  example_seg_reduce.cu  example_tune_policy.cu  histo_study.cu  invoke_foo.cu
experimental/: Makefile  coo_graph.cuh  cpu_spmv_compare.cpp  example_coo_spmv.cu  histogram_compare.cu  matrix.h  sparse_matrix.h  spmv_compare.cu  spmv_script.sh
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_5f.html  classes_5f.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_67.js  classes_69.js  classes_6c.js  classes_6d.js  classes_72.js  classes_74.js  classes_77.js  enums_62.js  enums_67.js  enums_70.js  enumvalues_70.js  enumvalues_72.js  (+66 more)
test/: CMakeLists.txt  Makefile  README.md  bfloat16.h  catch2_test_block_adjacent_difference.cu  catch2_test_block_histogram.cu  catch2_test_block_radix_sort.cu  catch2_test_block_radix_sort.cuh  catch2_test_block_radix_sort_custom.cu  catch2_test_block_reduce.cu  catch2_test_block_run_length_decode.cu  catch2_test_block_scan.cu  catch2_test_block_shuffle.cu  catch2_test_block_store.cu  catch2_test_cdp_helper.h  catch2_test_cdp_wrapper.cu  catch2_test_device_decoupled_look_back.cu  catch2_test_device_radix_sort_custom.cu  catch2_test_helper.h  catch2_test_printing.cu  catch2_test_radix_operations.cu  catch2_test_util_type.cu  catch2_test_warp_load.cu  catch2_test_warp_mask.cu  catch2_test_warp_merge_sort.cu  catch2_test_warp_reduce.cu  catch2_test_warp_scan.cu  catch2_test_warp_store.cu  fill_striped.cuh  half.h  link_a.cu  link_b.cu  link_main.cpp  removeme.cu  test_allocator.cu  test_block_adjacent_difference.cu  test_block_histogram.cu  test_block_load_store.cu  test_block_merge_sort.cu  test_block_radix_rank.cu  (+51 more)
test/c2h/: custom_type.cuh  generators.cu  generators.cuh
test/cmake/: CMakeLists.txt  check_namespace.cmake  check_source_files.cmake
test/cmake/test_install/: CMakeLists.txt
tune/: Makefile  tune_device_reduce.cu
(+1043 files in other folders)
